[package]
name = "yas"
version = "1.0.13"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
enigo = "0.0.14"
tract-onnx = "0.15.3"
serde = "1.0.147"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
regex = "1.5.4"
log = "0.4.14"
env_logger = "0.9.0"
edit-distance = "2.1.0"
clap = "4.0.18"
os_info = "3.0.7"
strum = "0.24"
strum_macros = "0.24"
rand = "0.8.5"
anyhow = "*"
dxgcap = "*"
tungstenite = "0.17.3"
open = "3.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "wingdi", "winnt", "securitybaseapi", "libloaderapi"] }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
panic = "abort"
strip = true
